# ml-in-dota

./: .gitattributes  .gitignore  docker-compose.yml  presentation_pitch.md  pyproject.toml  readme.md  variant_2.ipynb
data/: heroStats.json
data/data_scrtipts/: produce_dataset.ipynb
data/matches/: match_ids.json
data/models/: boosting.ipynb  final_catboost.ipynb  logreg.ipynb  model_comparison.csv  unified_model_evaluation_fixed.ipynb
data/models/artifacts/logreg/: dota_logreg_pipeline_1_5s.joblib  dota_logreg_pipeline_1s.joblib  dota_logreg_pipeline_20s.joblib  dota_logreg_pipeline_2_5s.joblib
data/models/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
data/models/catboost_info/learn/: events.out.tfevents
data/models/catboost_info/test/: events.out.tfevents
data/parser/: dockerfile  go.mod  go.sum  main.go  pyproject.toml
data/parser/dotadata/: abilities.json
data/parser/postgres/: connections_init.go  worker.go
data/parser/utils/: beautiful_print.go  function.go  general.go  items.go  vision.go
data/postgres_init/: 1_users_init.sql  2_refresh_token.sql  tgbot_init.sql  train_init.sql
research/: pyproject.toml
research/dota_info/: available_data.ipynb  gamestate_integration_dota2-gsi.cfg  variant_2.ipynb
research/dota_info/openDota_api/: 8654087914_api_parsed.json
research/notebooks/: pyproject.toml
scripts/: replay.py  run-test.sh  run.sh
scripts/gsi_jsonl/: 8654087914_gsi.jsonl
services/auth/: Dockerfile  main.py  pyproject.toml
services/auth/scr/api/: router.py
services/auth/scr/api/v1/: auth.py
services/auth/scr/core/: config.py  database.py  redis.py
services/auth/scr/dependencies/: auth.py  services.py
services/auth/scr/models/: refresh_token.py  user.py
services/auth/scr/repositories/: auth_repo.py
services/auth/scr/schemas/: common.py  token.py  user.py
services/auth/scr/services/: auth_service.py  password_service.py  token_service.py
services/bff/: Dockerfile  README.md  go.mod  go.sum
services/bff/cmd/server/: main.go
services/bff/internal/config/: config.go
services/bff/internal/handlers/: handlers.go  handlers_test.go  testdata_test.go
services/bff/internal/redisclient/: client.go  fake.go  fake_test.go
services/bff/internal/ws/: predictions.go  predictions_test.go
services/bot/: Dockerfile  README.md  main.py  pyproject.toml
services/bot/db/: users.py
services/bot/scr/: config.py  keyboards.py  states.py  user_token.py
services/bot/scr/handlers/: __init__.py  dota_play.py  registration.py
services/bot/scr/models/: database.py
services/bot/scr/schemas/: users.py
services/dota_heatmap/: pyproject.toml
services/front/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
services/front/src/: App.tsx  index.css
services/front/src/components/: ConfigPanel.tsx  GsiConfigBlock.tsx  HeatmapCanvas.tsx  MapPanel.tsx  OptionGroup.tsx  StartStopButton.tsx  ToggleSwitch.tsx
services/front/src/hooks/: usePredictionStream.ts
services/front/src/lib/: api.ts  gsi.ts  token.ts
services/front/src/types/: config.ts
services/front/tests/: ConfigPanel.test.tsx  GsiConfigBlock.test.tsx  HeatmapCanvas.test.tsx  StartStopButton.test.tsx  gsi.test.ts  token.test.ts
services/gsi_processor/: Dockerfile  main.py  pyproject.toml
services/gsi_processor/local_data/: heroNames.json  heroStats.json
services/gsi_processor/scr/: config.py  redis.py
services/gsi_processor/scr/api/: dependencies.py  router.py
services/gsi_processor/scr/api/routers/: gsi_input.py  health.py
services/gsi_processor/scr/infra/: catalog.py  config.py  formulas.py  redis.py
services/gsi_processor/scr/schemas/: dota.py  dota_input.py  dota_output.py  inference_queue.py  snapshot.py
services/gsi_processor/scr/services/: process.py  redis_state.py
services/inference/: Dockerfile  main.py  pyproject.toml
services/inference/artifacts/logreg/: dota_logreg_pipeline_10s.joblib  dota_logreg_pipeline_15s.joblib
services/inference/scr/: __init__.py  main.py
services/inference/scr/api/: __init__.py  router.py
services/inference/scr/infra/: __init__.py  config.py  redis.py
services/inference/scr/schemas/: __init__.py  inference_request.py  inference_responce.py  inference_response.py  prediction_config.py
services/inference/scr/services/: __init__.py  batch.py  features.py  model.py  worker.py
services/web/: Dockerfile  app.py  pyproject.toml
services/web/scr/api/: auth_client.py  heatmap_client.py
services/web/scr/components/: auth_form.py  heat_map.py
services/web/scr/infra/: config.py  schemas.py
tests/: conftest.py  gsi_service.py  read_matrix.py  run_gsi_with_token_config.py  send_jsonl_to_gsi_collector.py  test_gsi_processor_integration.py  test_inference_prediction_config.py  test_inference_worker_integration.py  test_pipeline_e2e.py  test_web_client_contract.py  write_heatmap_to_redis.py
