[project]
name = "ml-in-dota"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "fakeredis>=2.35.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "requests>=2.33.1",
    "ruff>=0.15.13",
    "scikit-learn>=1.8.0",
]

[tool.uv.workspace]
members = [
    "services/gsi_processor",
    "services/bot",
    "services/web",
    "services/auth",
    "services/inference",
]

[dependency-groups]
dev = [
    "fakeredis>=2.31.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
]
