[project]
name = "ml-in-dota"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"


[tool.uv.workspace]
members = [
    "services/gsi_processor",
    "services/web",
    "services/inference",
]

[dependency-groups]
dev = [
    "fakeredis>=2.31.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]
